# mcp-adk-dev-environment

./: .env  .gitignore  .pre-commit-config.yaml  ADK_COMPLETE_SETUP.md  ADK_REPOSITORY_SETUP_COMPLETE.md  MCP_PYTHON_REPOSITORY_GUIDE.md  NETWORK_DISCOVERY_MCP_SETUP.md  README.md  SETUP_INSTRUCTIONS.md  mcp-config.json  pyproject.toml  requirements.txt  start-mcp-servers.sh  test-mcp-servers.sh  test-network-discovery.sh
.devcontainer/: Dockerfile  bashrc  devcontainer.json
network_discovery_mcp/: README.md  pyproject.toml  test_basic.py
network_discovery_mcp/network_discovery_mcp/: __init__.py  scanner.py  server.py
network_discovery_mcp/tests/: test_network_discovery.py
